# mc-server-rs

./: Cargo.toml  flake.nix
src/: lib.rs  text_component.rs  types.rs
src/data/: block.rs  components.rs  mod.rs  particle.rs  player.rs
src/data/entity/: area_effect_cloud.rs  display.rs  hanging.rs  interaction.rs  mod.rs  projectile.rs  vehicle.rs
src/data/entity/mob/: allay.rs  armadillo.rs  armor_stand.rs  axolotl.rs  cat.rs  copper_golem.rs  ender_dragon.rs  enderman.rs  frog.rs  horse.rs  llama.rs  mannequin.rs  memories.rs  mod.rs  mooshroom.rs  panda.rs  parrot.rs  pufferfish.rs  rabbit.rs  raider.rs  salmon.rs  shulker.rs  tropical_fish.rs  villager.rs  warden.rs  wolf.rs  zombie.rs
tests/: types.rs
