[package]
name = "mc-server-rs"
version = "1.21.4-dev"
edition = "2024"
license = "MIT"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "as_ref"] }
serde = { version = "1.0.228", features = ["derive"] }
fastnbt = "2.6.0"
serde_with = "3.15.1"
strum = { version = "0.27.2", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
bitflags = { version = "2.10.0", features = ["serde"] }
glam = "0.30.9"
num-traits = "0.2.19"

[dev-dependencies]
rstest = "0.26.1"
